--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-		"css-build": "node-sass --omit-source-map-url assets/sass/bulma.scss assets/css/bulma.css",
-		"css-watch": "pnpm run css-build -- --watch",
-		"start": "pnpm run css-watch"
+    "css-build": "node-sass --omit-source-map-url assets/sass/bulma.scss assets/css/bulma.css",
+    "css-watch": "pnpm run css-build -- --watch",
+    "start": "pnpm run css-watch"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
+    "@nuxtjs/web-vitals": "^0.2.6",
     "@oruga-ui/oruga-next": "^0.6.0",
     "@oruga-ui/theme-bulma": "^0.2.11",
     "bulma-list": "^1.2.0",
