--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "devDependencies": {
-    "@types/node": "^18",
-    "@vuestic/nuxt": "^1.0.11",
-    "nuxt": "^3.4.3"
-  }
+	"name": "intelligent-world-2030",
+	"private": true,
+	"scripts": {
+		"build": "nuxt build",
+		"dev": "nuxt dev",
+		"generate": "nuxt generate",
+		"preview": "nuxt preview",
+		"postinstall": "nuxt prepare",
+		"css-build": "node-sass --omit-source-map-url assets/sass/bulma.scss assets/css/bulma.css",
+		"css-watch": "pnpm run css-build -- --watch",
+		"start": "pnpm run css-watch"
+	},
+	"devDependencies": {
+		"@types/node": "^18.16.3",
+		"node-sass": "^8.0.0",
+		"nuxt": "^3.4.3"
+	},
+	"dependencies": {
+		"@oruga-ui/oruga-next": "^0.6.0",
+		"@oruga-ui/theme-bulma": "^0.2.9"
+	}
 }
