--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
 		"start": "pnpm run css-watch"
 	},
 	"devDependencies": {
-		"@types/node": "^18.16.3",
+		"@types/node": "^18.16.5",
 		"node-sass": "^8.0.0",
 		"nuxt": "^3.4.3"
 	},
 	"dependencies": {
+		"@mdi/font": "^7.2.96",
 		"@oruga-ui/oruga-next": "^0.6.0",
-		"@oruga-ui/theme-bulma": "^0.2.9"
+		"@oruga-ui/theme-bulma": "^0.2.10",
+		"vue-scrollto": "^2.20.0"
 	}
 }
