--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-	"name": "intelligent-world-2030",
-	"private": true,
-	"scripts": {
-		"build": "nuxt build",
-		"dev": "nuxt dev",
-		"generate": "nuxt generate",
-		"preview": "nuxt preview",
-		"postinstall": "nuxt prepare",
+  "name": "huawei-intelligent-world-2030",
+  "private": true,
+  "scripts": {
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare",
 		"css-build": "node-sass --omit-source-map-url assets/sass/bulma.scss assets/css/bulma.css",
 		"css-watch": "pnpm run css-build -- --watch",
 		"start": "pnpm run css-watch"
-	},
-	"devDependencies": {
-		"@types/node": "^18.16.19",
-		"nuxt": "^3.6.3"
-	},
-	"dependencies": {
-		"@mdi/font": "^7.2.96",
-		"@oruga-ui/oruga-next": "^0.6.0",
-		"@oruga-ui/theme-bulma": "^0.2.11",
-		"bulma-list": "^1.2.0",
-		"node-sass": "^8.0.0",
-		"vue-scrollto": "^2.20.0"
-	}
+  },
+  "devDependencies": {
+    "@nuxt/devtools": "latest",
+    "@types/node": "^18.16.19",
+    "nuxt": "^3.6.3"
+  },
+  "dependencies": {
+    "@mdi/font": "^7.2.96",
+    "@oruga-ui/oruga-next": "^0.6.0",
+    "@oruga-ui/theme-bulma": "^0.2.11",
+    "bulma-list": "^1.2.0",
+    "node-sass": "^9.0.0",
+    "vue-scrollto": "^2.20.0"
+  }
 }
