--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
-    "@nuxt/image": "^0.7.1",
+    "@nuxt/image": "1.0.0-rc.1",
     "@oruga-ui/oruga-next": "^0.6.0",
     "@oruga-ui/theme-bulma": "^0.2.11",
     "bulma-list": "^1.2.0",
