--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/image": "1.0.0-rc.1",
     "@oruga-ui/oruga-next": "^0.6.0",
     "@oruga-ui/theme-bulma": "^0.2.11",
+    "animate.css": "^4.1.1",
     "bulma-list": "^1.2.0",
     "sass": "^1.66.1",
     "vue-scrollto": "^2.20.0"
