--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^0.8.3",
-    "nuxt": "^3.7.3"
+    "@nuxt/devtools": "^1.0.6",
+    "nuxt": "^3.8.2"
   },
   "dependencies": {
-    "@mdi/font": "^7.2.96",
-    "@nuxt/image": "1.0.0-rc.1",
-    "@oruga-ui/oruga-next": "^0.6.0",
+    "@mdi/font": "^7.3.67",
+    "@nuxt/image": "1.1.0",
+    "@oruga-ui/oruga-next": "^0.7.0",
     "@oruga-ui/theme-bulma": "^0.2.11",
     "animate.css": "^4.1.1",
     "bulma-list": "^1.2.0",
-    "sass": "^1.67.0",
+    "sass": "^1.69.5",
     "vue-scrollto": "^2.20.0"
   }
 }
