migrate to bulma v1

--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@nuxt/image": "1.7.0",
-    "@oruga-ui/oruga-next": "0.9.0-pre.1",
-    "@oruga-ui/theme-bulma": "^0.3.0",
     "animate.css": "^4.1.1",
+    "bulma": "^1.0.2",
     "bulma-list": "^2.1.0",
     "sass": "^1.77.8",
     "vue-scrollto": "^2.20.0"
